--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -137,6 +137,9 @@
     </app-home-section>
   </div>
 
+  <app-ad-sense adClient="ca-pub-7379021241824282" adSlot="7683446640" adFormat="auto"
+    fullWidthResponsive="true"></app-ad-sense>
+
   <!-- Contribution Section -->
   <section class="contribution-section py-4">
     <div class="container">
