--- a/src/app/modules/deck/deck.component.html
+++ b/src/app/modules/deck/deck.component.html
@@ -306,11 +306,8 @@
       <app-library-list [libraryList]="deck.library"></app-library-list>
       }
     </div>
-    <!-- Adsense VtesDecks Deck Footer Responsive -->
-    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7379021241824282" data-ad-slot="8573339569"
-      data-ad-format="auto" data-full-width-responsive="true"></ins>
-    <div adSense></div>
-    <!-- Adsense End VtesDecks Deck Footer Responsive -->
+    <app-ad-sense adClient="ca-pub-7379021241824282" adSlot="8573339569" adFormat="auto"
+      fullWidthResponsive="true"></app-ad-sense>
     <div class="col-12 d-flex justify-content-center mt-3">
       <h2>{{ t('comments') }}</h2>
     </div>
