apply @angular/core:self-closing-tags migration

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<app-header></app-header>
+<app-header />
 <div class="container-xxl">
   <router-outlet></router-outlet>
 </div>
-<app-footer></app-footer>
-<app-toasts aria-live="polite" aria-atomic="true"></app-toasts>
+<app-footer />
+<app-toasts aria-live="polite" aria-atomic="true" />
