--- a/src/app/modules/deck-builder/crypt-builder/crypt-builder.component.html
+++ b/src/app/modules/deck-builder/crypt-builder/crypt-builder.component.html
@@ -111,7 +111,6 @@
       (groupSliderChange)="onChangeGroupSliderFilter($event)" [(capacitySlider)]="capacitySlider"
       (capacitySliderChange)="onChangeCapacitySliderFilter($event)" [(title)]="title"
       (titleChange)="onChangeTitleFilter($event)" [(sect)]="sect" (sectChange)="onChangeSectFilter($event)"
-      [(taints)]="taints" (taintsChange)="onChangeTaintsFilter($event)">
-    </app-crypt-builder-filter>
+      [(taints)]="taints" (taintsChange)="onChangeTaintsFilter($event)" />
   </ng-template>
 </ng-container>
