--- a/src/app/modules/deck-builder/library-builder/library-builder.component.html
+++ b/src/app/modules/deck-builder/library-builder/library-builder.component.html
@@ -104,7 +104,6 @@
       (typesChange)="onChangeTypesFilter($event)" [(bloodCostSlider)]="bloodCostSlider"
       (bloodCostSliderChange)="onChangeBloodCostSliderFilter($event)" [(poolCostSlider)]="poolCostSlider"
       (poolCostSliderChange)="onChangePoolCostSliderFilter($event)" [(title)]="title"
-      (titleChange)="onChangeTitleFilter($event)">
-    </app-library-builder-filter>
+      (titleChange)="onChangeTitleFilter($event)" />
   </ng-template>
 </ng-container>
