--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -138,7 +138,7 @@
   </div>
 
   <app-ad-sense adClient="ca-pub-7379021241824282" adSlot="7683446640" adFormat="auto"
-    fullWidthResponsive="true"></app-ad-sense>
+    fullWidthResponsive="true" />
 
   <!-- Contribution Section -->
   <section class="contribution-section py-4">
