--- a/src/app/modules/deck-builder/library-section/library-section.component.html
+++ b/src/app/modules/deck-builder/library-section/library-section.component.html
@@ -110,7 +110,6 @@
     (typesChange)="onChangeTypesFilter($event)" [(bloodCostSlider)]="bloodCostSlider"
     (bloodCostSliderChange)="onChangeBloodCostSliderFilter($event)" [(poolCostSlider)]="poolCostSlider"
     (poolCostSliderChange)="onChangePoolCostSliderFilter($event)" [(title)]="title"
-    (titleChange)="onChangeTitleFilter($event)">
-  </app-library-builder-filter>
+    (titleChange)="onChangeTitleFilter($event)" />
 </ng-template>
 </ng-container>
